update the code to match Catalyst 22.4. manage deps with Poetry

--- a/.gitignore
+++ b/.gitignore
@@ -140,9 +140,7 @@ cython_debug/
 # other
 .DS_Store
 .idea/
-logdir/checkpoints
+logdir
 data/sdg_classification/*.csv
 data/sdg_classification/*.zip
 !data/sdg_classification/*_toy.csv
-notebooks
-*.pkl
