--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ numpy = "^1.21.5"
 pandas = "^1.3.5"
 PyYAML = "^5.3.1"
 tensorboard = "^2.8.0"
-torch = "^1.10.0"
+torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl", platform = "linux" }
 transformers = "^4.18.0"
 
 [tool.poetry.dev-dependencies]
